--- a/src/data/page/job-guarantee.us.yml
+++ b/src/data/page/job-guarantee.us.yml
@@ -79,7 +79,7 @@ we_trust_section:
       text: Job placement rate
     - icon: graduation-2
       title: "140"
-      text: Days in avg. to get hired
+      text: Days on avg. to get hired
     - icon: chart
       title: "55%"
       text: Salary increase after graduation
