--- a/src/data/additional-redirects.yml
+++ b/src/data/additional-redirects.yml
@@ -190,4 +190,7 @@ redirects:
     #redirectInBrowser: true
     isPermanent: true # if permanent google will erase the original url from its results 
 
+  - fromPath: "/us/landing/dallas-scholarship"
+    toPath: "/us/landing/texas-scholarship"
+    isPermanent: true
     
