--- a/src/data/course/full-stack.us.yaml
+++ b/src/data/course/full-stack.us.yaml
@@ -34,7 +34,7 @@ apply_form:
   label: Full Stack Developer
 seo_title: "Full Stack Developer with AI Bootcamp "
 header:
-  title: "FULL STACK DEVELOPMENT WITH AI"
+  title: "FULL STACK DEVELOPMENT\nWITH AI"
   image: "../../../static/images/bg/program-bg.png"
   image_alt: "how-to-become-a-full-stack-developer-"
   paragraph: "Our Full Stack Development with AI bootcamp gets you job-ready for a future-proof career in today's tech — with unlimited mentorship and an AI-integrated curriculum. Plus, a job guarantee.*"
@@ -173,7 +173,7 @@ two_columns_rigo:
     
 
 badges:
-  paragraph: "Prepare to thrive in today's AI-powered tech industry with hyperpersonalized learning, unlimited 1:1 mentorship, and career support for life. Recognized by Course Report as one of the world's top coding bootcamps, chosen by Forbes as best bootcamp for students on a budget (2024), and rated 4.92/5 on SwitchUp. Licensed by the Florida Department of Education."
+  paragraph: "Prepare to thrive in today’s AI-fluent tech industry with hyperpersonalized, AI-powered learning, 1:1 mentorship, and career support for life. Recognized by Course Report as one of the world’s top coding bootcamps, chosen by Forbes as best bootcamp for students on a budget (2024), and rated 4.92/5 on SwitchUp. Licensed by the Florida Department of Education."
 upcoming:
   no_dates_message: "There are currently no upcoming dates for this program"
   actionMessage: "Let me know when dates are available"
