UPDATE: full stack with AI course

--- a/src/data/components/loc/loc.us.yaml
+++ b/src/data/components/loc/loc.us.yaml
@@ -1,5 +1,5 @@
-heading: "LOCATIONS: ONLINE OR IN-PERSON"
-sub_heading: "Whether you decide to enroll in our online or in-person program, you'll enjoy real-time, live interactions with our teachers, mentors, and fellow classmates. Engage in dynamic lectures, hands-on projects, and interactive exercises alongside your cohort, and gain all the knowledge you need to become a highly skilled professional."
+heading: "LEARN ONLINE OR IN PERSON — ALWAYS LIVE. ALWAYS SUPPORTED."
+sub_heading: "Choose the format that fits your life—our online and in-person programs both offer live, instructor-led classes, 1:1 mentorship, and collaboration with a real cohort of peers. Join live coding sessions, build projects together, and stay connected through Slack and weekly check-ins—no matter where you’re learning from."
 title_image: "Online, Hybrid or In-person. "
 title: "Our programs are"
 highlighted_text:
