--- a/src/data/landing/santiago-descuento-2024.es.yml
+++ b/src/data/landing/santiago-descuento-2024.es.yml
@@ -12,7 +12,7 @@ meta_info:
 
   # Set a particular course or location to the landing page
   # this UTM fields will be also included in the CRM contact
-  utm_course: ["full-stack", "datascience-ml", "cybersecurity", "applied-ai"]
+  utm_course: ["full-stack", "datascience-ml", "cybersecurity"]
   utm_location: ["santiago-chile"]
   automation: soft # comma separated, "soft" is the default value
   tag: request_more_info # comma separated, "request_more_info" is the default value
@@ -179,7 +179,7 @@ components:
     bullets:
       item_style: '{ "padding": 0, "font-weight": "300" }'
       items:
-        - text: "Utiliza el código <br>Webstarted&4Geeks20 para obtener un 20% de descuento en nuestros programas de Full Stack Development, Data Science, Ciberseguridad y Applied AI."
+        - text: "Utiliza el código <br>Webstarted&4Geeks20 para obtener un 20% de descuento en nuestros programas de Full Stack Development, Data Science, y Ciberseguridad."
           icon: "circle" #string with icon for example ['check', 'cicle', etc]
         - text: "Ofrecemos planes de financiación para que puedas cubrir el costo restante de tu programa de forma cómoda y enfocarte en tu aprendizaje."
           icon: "circle" #string with icon for example ['check', 'cicle', etc]
@@ -207,10 +207,6 @@ components:
       - icon: "machine"
         title: "Data Science"
         content: "Entra al mundo de la ciencia de datos y el machine learning, adquiriendo habilidades para analizar y visualizar información."
-
-      - icon: "applied-ai"
-        title: "IA para Profesionales"
-        content: "Aprende a utilizar la Inteligencia Artificial como herramienta para potenciar tus resultados y optimizar procesos."
 
       - icon: "cibersecurity"
         title: "Ciberseguridad"
