--- a/src/data/landing/santiago-programas.es.yml
+++ b/src/data/landing/santiago-programas.es.yml
@@ -12,7 +12,7 @@ meta_info:
 
   # Set a particular course or location to the landing page
   # this UTM fields will be also included in the CRM contact
-  utm_course: ["full-stack", "datascience-ml", "cybersecurity", "front-end-development", "applied-ai"]
+  utm_course: ["full-stack", "datascience-ml", "cybersecurity", "front-end-development"]
   utm_location: ["santiago-chile"]
   automation: soft # comma separated, "soft" is the default value
   tag: request_more_info # comma separated, "request_more_info" is the default value
@@ -179,10 +179,6 @@ components:
       - icon: "fullstack_2"
         title: "Frontend"
         content: "Especialízate en el desarrollo de la interfaz de usuario con tecnologías como JavaSCript y React."
-
-      - icon: "applied-ai"
-        title: "IA para Profesionales"
-        content: "Aprende a utilizar la Inteligencia Artificial como herramienta para potenciar tus resultados y optimizar procesos."
 
       - icon: "cibersecurity"
         title: "Ciberseguridad"
