--- a/src/data/landing/tech-coding-bootcamps-financing.us.yml
+++ b/src/data/landing/tech-coding-bootcamps-financing.us.yml
@@ -15,7 +15,7 @@ meta_info:
 
     # Set a particular course or location to the landing page
   # this UTM fields will be also included in the CRM contact
-  utm_course: ["full-stack", "datascience-ml", "cybersecurity", "applied-ai"]
+  utm_course: ["full-stack", "datascience-ml", "cybersecurity"]
   utm_location: ["atlanta-usa", "austin-usa", "chicago-usa", "downtown-miami", "houston-usa", "losangeles-usa", "newyork-usa", "orlando", "online"]
   automation: soft # comma separated, "soft" is the default value
   tag: request_more_info # comma separated, "request_more_info" is the default value
@@ -186,11 +186,6 @@ components:
       - icon: "cibersecurity"
         title: "CyberSecurity Bootcamp"
         content: "Become a cybersecurity specialist, equipped to identify, manage, and mitigate system vulnerabilities in compliance with ISO and other standards."
-
-      - icon: "applied-ai"
-        title: "Applied AI"
-        content: "Explore how to leverage artificial intelligence to advance your career. Learn best practices to use generative AI to your advantage and become more productive."
-
 
   - name: why_choose-4geeks
     position: 2
