--- a/src/data/landing/usa-programs.us.yml
+++ b/src/data/landing/usa-programs.us.yml
@@ -12,7 +12,7 @@ meta_info:
 
   # Set a particular course or location to the landing page
   # this UTM fields will be also included in the CRM contact
-  utm_course: ["datascience-ml", "full-stack", "cybersecurity", "applied-ai"]
+  utm_course: ["datascience-ml", "full-stack", "cybersecurity"]
   utm_location: ["atlanta-usa", "austin-usa", "chicago-usa", "downtown-miami", "houston-usa", "losangeles-usa", "newyork-usa", "orlando", "online", "tampa-usa"]
   automation: soft # comma separated, "soft" is the default value
   tag: request_more_info # comma separated, "request_more_info" is the default value
@@ -185,10 +185,6 @@ components:
         title: "Cybersecurity"
         content: "Become a cybersecurity specialist, equipped to protect networks, systems, and sensitive data by addressing vulnerabilities and ensuring compliance with ISO and other industry standards."
 
-      - icon: "applied-ai"
-        title: "AI for Professionals"
-        content: "Leverage artificial intelligence to advance your career. Learn best practices to use generative AI to your advantage and optimize productivity."
-      
   - name: the-academy
     position: 2
     layout: two_column_right
@@ -257,9 +253,6 @@ components:
         icon: "check" 
       - heading: "Cybersecurity Specialist"
         text: "With the boom in AI, demand for Cybersecurity is rapidly increasing, with average salary ranges between 100,000- 120,000 USD annually. Cybersecurity professionals use tools such as Wireshark, Metasploit, and others to safeguard systems and data.​"
-        icon: "check" 
-      - heading: "Applied AI"
-        text: "Professionals in any field are seeing significant boosts in productivity and earning potential by gaining expertise in AI tools and technologies."
         icon: "check" 
     button:
       text: "APPLY NOW"
