--- a/src/data/course/full-stack.us.yaml
+++ b/src/data/course/full-stack.us.yaml
@@ -37,7 +37,7 @@ header:
   title: "FULL STACK DEVELOPMENT\nWITH AI"
   image: "../../../static/images/bg/program-bg.png"
   image_alt: "how-to-become-a-full-stack-developer-"
-  paragraph: "Our Full Stack Development with AI bootcamp gets you job-ready for a future-proof career in today's tech — with unlimited mentorship and an AI-integrated curriculum. Plus, a job guarantee.*"
+  paragraph: "Our Full Stack Development with AI bootcamp gets you job-ready for a future-proof career in today's tech — with unlimited mentorship and an AI-integrated curriculum. Plus, a job guarantee."
 
 button:
   syllabus_heading: "Download Syllabus"
