--- a/src/data/plans/full-stack.us.yml
+++ b/src/data/plans/full-stack.us.yml
@@ -163,9 +163,8 @@ part_time:
     recomended: false
     scholarship: "Job Guarantee"
     payment_time: "Get hired or your money back"
-    price: "Tuition"
+    price: "+$2,000"
     original_price: ""
-    warning_message: "+ 2,000 USD"
     bullets: 
       - "Enroll, agreeing to terms and conditions."
       - "Fulfill required coursework and attendance."
@@ -351,7 +350,7 @@ part_time:
     recomended: false
     scholarship: "Full-Stack Program Only"
     payment_time: "Focus on learning to code. Pay upfront."
-    price: "USD $2.000"
+    price: "USD $2,000"
     bullets: 
       - "We’re fully committed to making our education accessible and offer multiple payment plans and financing options to hold up to our promise."
       - "You can adapt your learning path to your financial considerations. Choose between enrolling only in the full stack program, adding our career support services, or enrolling with a Job Guarantee."     
@@ -379,43 +378,3 @@ part_time:
       - "/images/visa-mastercard.png"
       - "/images/flevo-new.png"
 
-  - slug: 'venezuela-upfront-pt'
-    academies: []
-    recomended: false
-    scholarship: "Pay in 4 parts"
-    payment_time: "You can pay today or in 4 parts without interest"
-    price: "$2.000 USD"
-    original_price: "$4.000 USD"
-    bullets: 
-      - "Pay with debit, credit or wire transfer."
-      - "There is always a payment plan available for you to join 4Geeks Academy"
-      - "If you don't find here what you are expecting, please contact us and we will try to find new ways to help"     
-    icons: 
-      - "/images/visa-mastercard.png"
-
-  # - slug: 'venezuela-financed-pt'
-  #   academies: ['caracas-venezuela']
-  #   recomended: false
-  #   scholarship: "Financed"
-  #   payment_time: "12 months"
-  #   price: "~$200 / mo."
-  #   bullets: 
-  #     - "Financing in 2, 3 or up to 12 months."
-  #     - "Get interview with Flevo for fast financing approval."
-  #     - "Prices may vary depending on the length of your financing period."
-  #   icons: 
-  #     - "/images/flevo-new.png"
-
-  # - slug: 'venezuela-laptop-pt'
-  #   academies: ['caracas-venezuela']
-  #   recomended: false
-  #   scholarship: "Includes a new laptop"
-  #   payment_time: "Special offer with laptop included"
-  #   price: "~$2500"
-  #   bullets: 
-  #     - "There is always a payment plan available for you to join 4Geeks Academy"
-  #     - "If you don't find here what you are expecting, please contact us and we will try to find new ways to help"     
-  #     - "Pay with debit, credit or wire transfer."
-  #     - "Keep the laptop once you finish the program."
-    # icons:
-    #   - "/images/laptp.jpg"
